<resources>
    <string name="app_name">Control Escolar</string>
    <string name="btn_iniciar">Iniciar Sesión</string>
    <string name="txt_Bienvendio">Bienvenido</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="txt_ncuenta">Nº Cuenta</string>
    <string name="txt_Alumno">Alumno:</string>
    <string name="txt_ncuentaMenu">Nº Cuenta:</string>
    <string name="txt_pass">Contraseña</string>
    <string name="txt_Kardex">Boleta Calificaciones</string>
    <string name="txt_Justificante">Solicitar Justificante</string>
    <string name="txt_Estudio">Constancia de Estudio</string>
    <string name="txt_Credencil">Credencial</string>
    <string name="txt_Calendario">Calendario</string>
    <string name="img_fic">FIC</string>
    <string name="txt_olvidasteNIP">¿Olvidaste tu NIP?</string>
    <string name="img_fondo">FondoLogin</string>
    <string name="title_activity_splashcreen">SplashcreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="PROXIMAMENTE">PROXIMAMENTE</string>
    <string name="fecha">Fecha a Justificar</string>
    <string name="motivo">Decriba el motivo</string>
    <string name="Adjuntar">Adjuntar Evidencia</string>
    <string name="caso">Describa el motivo de su ausencia </string>
    <string name="justificante">Solicitar Justificante </string>
    <string name="SeleccionarFecha">Seleccionar Fecha </string>
    <string name="Historial">Historial de Justificantes </string>
    <string name="solicitud">Enviar Solicitud</string>
    <string name="Atras">Atras</string>
    <string name="Opciónseleccionada">Opción seleccionada:</string>
    <string name="SJ">Solicitud de Justificante</string>
    <string name="SESIONJUSTIFICANTE">SESION DE JUSTIFICANTE</string>
    <string name="DERECHOS">Desarrollado por ALUMNOS :: Informática \n® 2023 todos los derechos reservados</string>

    <string-array name="Motivo">
        <item>PERSONALES</item>
        <item>SALUD</item>
        <item>COVID-19</item>
    </string-array>


</resources>