<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_fondo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="140dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:contentDescription="@string/img_fic"

            android:padding="16dp"
            app:srcCompat="@drawable/logofic" />

        <EditText
            android:id="@+id/editTextNum_Cuenta"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:background="@drawable/eddittext_background"
            android:ems="10"
            android:hint="@string/txt_ncuenta"
            android:textColor="@color/ColorFIC"
            android:textColorHighlight="@color/ColorFIC"
            android:textColorHint="@color/ColorFIC"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="16sp"
            android:autofillHints="cuenta"
            />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:background="@drawable/eddittext_background"
            android:textColor="@color/ColorFIC"
            android:textColorHighlight="@color/ColorFIC"
            android:textColorHint="@color/ColorFIC"
            android:ems="10"
            android:hint="@string/txt_pass"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16sp"
            android:autofillHints="password"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSelectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="48dp"
            android:background="@drawable/login_btn_background"
            android:onClick="loginBtn"
            android:text="@string/btn_iniciar"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewOlvidasteNIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:minHeight="48dp"
            android:text="@string/txt_olvidasteNIP"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>